--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -1,6 +1,54 @@
-#root {
-  max-width: 920px;
+* {
+  box-sizing: border-box;
+  border: none;
+  color: #333;
+  font-size: 14px; }
+
+#app {
+  max-width: 400px;
   width: 100%;
-  margin: 0 auto; }
+  background: #e0e0e0;
+  padding: 20px 10px;
+  margin: 0 auto;
+  border-radius: 3px; }
+
+.todo__add {
+  width: 100%; }
+
+.add__input {
+  width: 75%;
+  display: inline-block;
+  height: 30px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  padding-left: 10px;
+  border: 1px solid #06909e; }
+
+.add__button {
+  width: 24%;
+  display: inline-block;
+  height: 30px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  cursor: pointer;
+  color: #fff;
+  background: #06909e; }
+
+.todo {
+  height: 30px; }
+  .todo__text {
+    cursor: pointer;
+    font-size: 18px;
+    transition: text-decoration 0.3s linear; }
+
+.todo__remove {
+  float: right;
+  background: #06909e;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  width: 21px;
+  height: 21px;
+  cursor: pointer; }
 
 /*# sourceMappingURL=styles.css.map*/
